--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="Test Case"
-      content="HedgeFlows Test Case"
+      content="Test Case"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>HedgeFlows Test Case</title>
+    <title>Test Case</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
